# simple-ai-chatbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  config.example.json  docker-compose.yaml  main.py  nginx.conf  pyproject.toml  re.txt  readme.md
src/app/: __base.py  __init__.py  skills.py
src/app/database/: __init__.py
src/core/: base_agent.py  base_skill_class.py  shared_skills.py
src/skills/: __init__.py  conversation_skill.py  developer_agent.py  image_generator.py  torob_search_skill.py
src/utils/: password_hasher.py
